# hh-scarper

./: .env_example  .gitignore  Makefile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: hh-scarper-check.yml
core/: celery.py  settings.py  urls.py
hh_scarper/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
hh_scarper/migrations/: 0001_initial.py
hhscarper/: admin.py  apps.py  charts.py  filters.py  mixins.py  models.py  preprocessor.py  reports.py  scarper.py  tasks.py  urls.py  views.py
hhscarper/management/commands/: updatelemmas.py  updatereports.py
hhscarper/migrations/: 0001_initial.py  0002_auto_20210819_1218.py  0002_auto_20210826_1132.py  0002_vacancy.py  0003_alter_vacancy_key_skills.py  0003_auto_20210809_1659.py  0003_auto_20210831_1636.py  0004_auto_20210821_1304.py  0004_diffreport.py  0004_vacancy_link.py  0005_auto_20210810_0712.py  0005_auto_20210821_1606.py  0005_delete_diffreport.py  0006_alter_vacancy_description.py  0006_auto_20210821_1613.py  0007_alter_vacancyrequest_table.py  0007_rename_search_value_request_keyword.py  0008_alter_request_status.py  0008_auto_20210822_1311.py  0009_auto_20210813_1441.py  0009_skillreport.py  0010_auto_20210822_1358.py  0010_remove_request_time.py  0011_delete_skillreport.py  0011_request_time.py  0012_skillreport.py  0013_delete_skillreport.py  0014_skillreport.py  0015_alter_skillreport_table.py  0016_alter_skillreport_table.py  0017_auto_20210822_1532.py  0018_wordreport.py  0019_delete_wordreport.py  0020_wordreport.py
hhscarper/templates/hhscarper/: _skill-key-reports.html  dashboard.html  report-detail.html  reports.html  request-create.html  request-delete.html  request-detail.html  request-list.html  user-login.html  vacancy-list.html
hhscarper/tests/: test_dashboard.py  test_main.py  test_request.py  test_scarper.py  test_scrape.py  test_vacancy.py  test_views.py
static/css/: dashboard.css
templates/: _header.html  _navbar.html  base.html  header.html  list.html  navbar.html  new_base.html  new_navbar.html
workflows/: hh-scarper-check.yml
