[tool.poetry]
name = "hh-scarper"
version = "0.1.0"
description = ""
authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
selenium = "^3.141.0"
redis = "^3.5.3"
gunicorn = "^20.1.0"
celery = "^5.1.2"
dj-database-url = "^0.5.0"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
