[tool.poetry]
name = "hh-scarper"
version = "0.1.0"
description = ""
authors = ["Ramil Gadzhiev <rami.gaggi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
redis = "^3.5.3"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.1"
django-bootstrap4 = "^3.0.1"
requests = "^2.26.0"
nltk = "^3.6.2"
pymystem3 = "^0.2.0"
beautifulsoup4 = "^4.9.3"
celery = "^5.1.2"
whitenoise = "^5.3.0"
django-extensions = "^3.1.3"
bokeh = "^2.3.3"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
pytest-django = "^4.4.0"
coverage = "^5.5"
pytest-cov = "^2.12.1"
requests-mock = "^1.9.3"
flower = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
